--- a/JavaApplication7/nbproject/project.properties
+++ b/JavaApplication7/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Game2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.javalib-1.0.3.jar=/Users/Isabella/Documents/gameLib/javalib-1.0.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.javalib-1.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
